--- a/style.css
+++ b/style.css
@@ -1,8 +1,34 @@
+.table{
+    background-color: #ffb300;
+}
 .table td{
-    padding: 0;
-    margin: 0;
     width: 100px;
     height: 100px;
+}
+td{
+    padding: 0;
+}
+.table .number{
+    height: 60px;
+    text-align: center;
+    border: 0;
+    font-weight: bold;
+    font-size: 23px;
+}
+.number p{
+    margin-bottom: 10px;
+}
+.col{
+    width: 40px !important;
+    font-weight: bold;
+    font-size: 23px;
+    text-align: right;
+}
+.col p{
+    margin-right: 15px;
+}
+.bg-white{
+    background-color: white;
 }
 .bg-black{
     background-color: black;
